# UHTF

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  config.example.yaml  go.mod  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml  release.yml
examples/: basic_usage.py
plugins/arduino/: __init__.py
plugins/raspberry_pi/: __init__.py
src/python/uhtf/: __init__.py  cli.py  config.py  core.py  plugin_manager.py  report_generator.py
tests/: conftest.py  test_core.py  test_plugin_manager.py  test_report_generator.py
